# espol-cuboids

./: .gitignore  LICENSE.md  README.md  pyproject.toml  run_dda_sweep.py  run_mom2d_sweep.py  run_mom3d_sweep.py
data/: notes.txt
data/_dda_cache/: 0026e2874c54b82f.json  01a3eddc6d11153e.json  0306ad492e9a92d1.json  037748736133ea18.json  03abc8f861b6ecbf.json  0d42014357299b2b.json  0e0dafa06c2e256c.json  0ea23d5d95828723.json  14736ad28568e70c.json  18796ad5543c8f8c.json  1a9fd5316379122f.json  1dd0b6eedec8339a.json  21e83ab2f36a032b.json  23958b529b3cd11a.json  2d18b615f9b5240c.json  2de66e6cc0f54bb5.json  3023e2b36a4dbc51.json  33593d1dc2aa02ea.json  33b4f0e0dc582f86.json  38decc4774548a6d.json  3da225c119f29c63.json  4069834e9c2184c7.json  415d99ee9b5e06a1.json  415ec9e0a75000ab.json  4414ffd1805915ce.json  4ae0964f97eb0a3e.json  4f5a5a4589751752.json  51521c3b9af1265c.json  5434351080e010e9.json  5a7390c7e81aa319.json  5b68dc4ec6a95d80.json  5bf4fcfb5337956e.json  5cf89fe7d2f44d9a.json  5d5399b5855169de.json  5f1c715679581907.json  614f5c47bc02c1c8.json  (+63 more)
docs/: implementation_dda.md  implementation_mom2d.md  implementation_mom3d.md  user_guide.aux  user_guide.fdb_latexmk  user_guide.fls  user_guide.out  user_guide.tex
examples/: basic_usage.py  run_dda_sweep.py  run_mom2d_sweep.py  run_mom3d_sweep.py
tests/: conftest.py  test_dda_core.py  test_mom2d.py  test_mom3d.py  test_vector.py
tools/: _path_setup.py  gen_mesh_2d_rect.py  gen_mesh_3d_rect.py  gen_mom_3d.py  mom3d_aca.py  mom3d_kernel.py  sm_comp_polarizability_2d.py  sm_comp_polarizability_3d.py
(+3484 files in other folders)
